- New: Product option "Move on open" (#569)
- Improved: (not F-Droid) ML Kit scanner now only recognizes barcodes in preview field
- Improved: Shopping mode page now can be opened with deeplink "grocy://shoppingmodepage" (#519)
- Fixed: F-Droid build should work again (#566)
- Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
- Fixed: Crash on chores overview page with wrong rescheduled date format (#564)
- Fixed: Rescheduling chore with time tracking enabled did not set chosen time
- Fixed: Note field on purchase and inventory page was limited to 10 characters (#577)
- Fixed: Crash when editing an ingredient of a recipe (#579)
- Fixed: (not F-Droid) ML Kit scanner doesn't ask for contacts permission anymore

## 2.3.0

- New: Support for grocy server v3.3.1
- New: Recipes feature (huge thanks @Tim-Otte for your great work!) (#148)
- New: HTML viewer and editor for product description which can load pictures
- New: Stock journal page (#140)
- New: Server v3.3.0 feature "Notes for stock entries" (#511)
- New: Stock quantity unit now can be changed with server v3.3.0 (#511)
- New: Notification for due soon items in stock (thanks @igor-cali for the initial work) (#108)
- New: Chores can now be rescheduled (server v3.3.0 feature) (#511)
- Improved: Entries on stock entries page are colored if volatile
- Improved: Price entered on inventory page is now related to selected quantity unit (#511)
- Improved: On transaction pages adding of known barcode is prevented (#541)
- Improved: On stock overview page you can search with grocy code (#547)
- Improved: Chores page now displays time if necessary (#549)
- Improved: (not F-Droid) Add explanation for contacts permission on devices with GPlay services
- Fixed: Product 'purchase to stock' conversion is preferred to additional conversions (#490)
- Fixed: Quantity units from default conversions are now selectable on transaction pages (#530)